@@ -1,3 +1,6 @@
+2020-11-19 (12.20)
+	COMMON: Fix to allow multiple modules and units within saem program
+
 2020-11-13 (12.20)
 	ANDROID: add option to preserve user data when app uninstalled
 
